--- a/files/LaunchDaemons/com.apple.periodic-weekly.plist
+++ b/files/LaunchDaemons/com.apple.periodic-weekly.plist
@@ -1,36 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>Label</key>
 	<string>com.apple.periodic-weekly</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>/usr/libexec/periodic-wrapper</string>
+		<string>/usr/sbin/periodic</string>
 		<string>weekly</string>
 	</array>
 	<key>LowPriorityIO</key>
 	<true/>
 	<key>Nice</key>
 	<integer>1</integer>
-	<key>LaunchEvents</key>
+	<key>StartCalendarInterval</key>
 	<dict>
-		<key>com.apple.xpc.activity</key>
-		<dict>
-			<key>com.apple.periodic-weekly</key>
-			<dict>
-				<key>Interval</key>
-				<integer>604800</integer>
-				<key>GracePeriod</key>
-				<integer>14400</integer>
-				<key>Priority</key>
-				<string>Maintenance</string>
-				<key>AllowBattery</key>
-				<false/>
-				<key>Repeating</key>
-				<true/>
-			</dict>
-		</dict>
+		<key>Hour</key>
+		<integer>3</integer>
+		<key>Minute</key>
+		<integer>15</integer>
+		<key>Weekday</key>
+		<integer>6</integer>
 	</dict>
 	<key>AbandonProcessGroup</key>
 	<true/>
