Install files to `/private/etc`, not `/etc`

--- a/files/CMakeLists.txt
+++ b/files/CMakeLists.txt
@@ -1,6 +1,6 @@
 project(crontabs_files)
 
-install(FILES periodic.conf DESTINATION libexec/darling/etc/defaults)
+install(FILES periodic.conf DESTINATION libexec/darling/private/etc/defaults)
 install(FILES periodic.conf.5 DESTINATION libexec/darling/usr/share/man/man5)
 
 install(FILES
@@ -11,7 +11,7 @@ install(FILES
 
 	DESTINATION libexec/darling/System/Library/LaunchDaemons)
 
-install(DIRECTORY daily weekly monthly DESTINATION libexec/darling/etc/periodic)
+install(DIRECTORY daily weekly monthly DESTINATION libexec/darling/private/etc/periodic)
 
-install(FILES newsyslog.conf DESTINATION libexec/darling/etc)
+install(FILES newsyslog.conf DESTINATION libexec/darling/private/etc)
 
